# klipper_esp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  printer.cfg  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/board/: CMakeLists.txt  Kconfig  adc.c  alloc.c  compile_time_request.c  console.c  crc16_ccitt.c  gpio.c  hard_pwm.c  i2c.c  internal.c  serial.c  serial_irq.c  spi.c  timer.c  timer_irq.c  watchdog.c
components/board/include/: autoconf.h
components/board/include/board/: gpio.h  internal.h  irq.h  usb_cdc_ep.h  usbstd.h
components/klipper/: CMakeLists.txt  compile_time_request.c  compile_time_request.txt  concatenate_ctr.py  extract_compile_time_requests.py  klipper.dict
components/klipper/board/: adc.c  autoconf.h  compile_time_request.c  config.h  console.c  gpio.c  gpio.h  hard_pwm.c  i2c.c  internal.c  internal.h  misc.h  serial.c  spi.c  timer.c
components/klipper/board/include/board/: gpio.h  internal.h  io.h  irq.h  serial_irq.h  usb_cdc.h  usbstd_cdc.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
