idf_component_register(SRCS "adc.c" 
                            "gpio.c" 
                            "hard_pwm.c" 
                            "serial.c" 
                            "timer.c" 
                            "watchdog.c"
                            "compile_time_request.c"
                            "internal.c"
                    INCLUDE_DIRS "include"
                    REQUIRES klipper driver esp_adc)
